--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "axios": "^1.9.0",
     "firebase": "^11.6.1",
     "framer-motion": "^12.9.4",
+    "quill-mention": "^6.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-mentions": "^4.4.10",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.3",
     "react-toastify": "^11.0.5",
