--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.7.0",
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "firebase": "^11.6.1",
     "framer-motion": "^12.9.4",
     "quill-mention": "^6.0.2",
