--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
+    "emoji-mart": "^5.6.0",
+    "emoji-picker-react": "^4.12.2",
     "firebase": "^11.6.1",
     "framer-motion": "^12.9.4",
     "gsap": "^3.13.0",
